k8s/scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scraper
  name: scraper
  namespace: screeps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  strategy: {}
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: scraper
        image: ${DOCKER_REPO}/screeps-scraper:${TAG_NAME}
        volumeMounts:
        - name: scraper-config
          mountPath: /scraper/config.yaml
          subPath: config.yaml
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: scraper-config
        configMap:
          name: scraper-config
