k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: screeps
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
