k8s/scraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scraper
  name: scraper
  namespace: screeps
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: scraper
